--- a/haml/index.html.haml
+++ b/haml/index.html.haml
@@ -9,6 +9,7 @@
   %script{ type: 'text/javascript', src: 'http://maps.google.com/maps/api/js?sensor=true' }
   %script{ type: 'text/javascript', src: 'script/geo_map.js' }
   %script{ type: 'text/javascript', src: 'script/geo_tracker.js' }
+  %script{ type: 'text/javascript', src: 'script/audio_drop.js' }
   %script{ type: 'text/javascript', src: 'script/audio-map.js' }
 
 %body{onload: "initialize_map()"}
@@ -16,4 +17,5 @@
   #overlay
     %p
       Drop a pin somewhere to add a track to that location
+  %audio
 
