--- a/haml/index.html.haml
+++ b/haml/index.html.haml
@@ -6,7 +6,7 @@
   %link{ type: 'text/css', rel: 'stylesheet', href: 'style/audio-map.css' }
 
   %script{ type: 'text/javascript', src: 'script/jquery-1.7.1.min.js' }
-  %script{ type: 'text/javascript', src: 'http://maps.google.com/maps/api/js?sensor=true' }
+  %script{ type: 'text/javascript', src: 'http://maps.google.com/maps/api/js?libraries=geometry&sensor=true' }
   %script{ type: 'text/javascript', src: 'script/geo_map.js' }
   %script{ type: 'text/javascript', src: 'script/geo_tracker.js' }
   %script{ type: 'text/javascript', src: 'script/audio_drop.js' }
@@ -16,6 +16,8 @@
   #map_canvas{:style => "width: 100%; height: 100%"}
   #overlay
     %p
-      Drop a pin somewhere to add a track to that location
+      Click somewhere on the map to drop the soundbyte on that location
+    %label{:for => 'radius'} Radius (in meters)
+    %input#radius{:name => 'radius', :type => 'number', :value => 5}
   %audio
 
