--- a/haml/index.html.haml
+++ b/haml/index.html.haml
@@ -19,5 +19,6 @@
       Click somewhere on the map to drop the soundbyte on that location
     %label{:for => 'radius'} Radius (in meters)
     %input#radius{:name => 'radius', :type => 'number', :value => 5}
-  %audio
+  %audio#example_sound{:preload => 'auto', :src => 'audio/gimme_danger.mp3'}
+    
 
