--- a/app/style/audio-map.css
+++ b/app/style/audio-map.css
@@ -12,6 +12,15 @@ body {
 }
 
 /* line 10, ../../scss/audio-map.sass */
+#map_canvas {
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  min-height: 100%;
+  overflow: hidden;
+}
+
+/* line 17, ../../scss/audio-map.sass */
 #overlay {
   color: white;
   z-index: 20;
@@ -22,8 +31,15 @@ body {
   background-color: black;
   opacity: 0.8;
   text-align: center;
+  padding: 10px 0 10px 0;
+  margin: 0 0 0 0;
 }
-/* line 21, ../../scss/audio-map.sass */
+/* line 30, ../../scss/audio-map.sass */
 #overlay p, #overlay span, #overlay div {
   opacity: 1;
+}
+
+/* line 33, ../../scss/audio-map.sass */
+#example_sound {
+  display: none;
 }
