--- a/scss/audio-map.sass
+++ b/scss/audio-map.sass
@@ -7,6 +7,13 @@ body
   margin: 0
   padding: 0
 
+#map_canvas
+  width: 100%
+  height: 100%
+  max-height: 100%
+  min-height: 100%
+  overflow: hidden
+
 #overlay
   color: white
   z-index: 20
@@ -17,6 +24,11 @@ body
   background-color: black
   opacity: 0.8
   text-align: center
+  padding: 10px 0 10px 0
+  margin: 0 0 0 0
 
   p, span, div
     opacity: 1
+
+#example_sound
+  display: none
