--- a/haml/index.html.haml
+++ b/haml/index.html.haml
@@ -22,7 +22,9 @@
       Tap a place on the map to drop the song there
     %label{:for => 'radius'} Radius (in meters)
     %input#radius{:name => 'radius', :type => 'number', :value => 5}
-    -#%p#audio_status Audio is not finished loading.
+    %p#audio_kick 
+      %a#play_audio{:href => '#'} Kick audio engine
+
   %audio#example_sound{:preload => 'auto', :src => 'audio/gimme_danger.mp3'}
     
 
